# BillingSolution

Backend/: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
Designs/: BillingSolutionC4.drawio
