[tool.poetry]
name = "Mars Billing Solution"
version = "0.1.0"
description = "A Simple Billing Solution for businesses"
authors = ["Ugochukwu Nwamanna <llousvamel11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
alembic = "^1.12.0"
gunicorn = "^21.2.0"
pydantic = {extras = ["dotenv"], version = "^2.3.0"}
pydantic-settings = "^2.0.3"
sqlalchemy = {extras = ["mypy"], version = "^2.0.20"}
tenacity = "^8.2.3"
asyncpg = "^0.28.0"
greenlet = "^2.0.2"
psycopg2 = "^2.9.7"
rele = "^1.13.0"
pytest-mock = "^3.11.1"


[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
isort = "^5.12.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
